--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ rvm:
 env:
   - DB=postgresql
 before_script:
-  - "rake db:create:all"
+  - "rake db:create"
   - "rake db:migrate"
+  - "rake db:seed"
 script:
   - "bundle exec rake db:test:prepare"
   - "rake"
